--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "prettier": "npx prettier . --write",
-    "prepare": "husky"
+    "prepare": "husky",
+    "vitest": "vitest run"
   },
   "lint-staged": {
     "*": "npm run prettier"
@@ -22,8 +23,12 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.12.0",
+    "@vue/test-utils": "^2.4.5",
+    "happy-dom": "^13.10.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "vitest": "^1.4.0"
   }
 }
