--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.12.0",
+    "@nuxtjs/sitemap": "^5.1.2",
     "@vue/test-utils": "^2.4.5",
     "happy-dom": "^13.10.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "nuxt-feedme": "^1.0.0",
     "prettier": "3.2.5",
     "vitest": "^1.4.0"
   }
