--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@nuxt/test-utils": "^3.12.0",
     "@nuxtjs/sitemap": "^5.1.2",
     "@vue/test-utils": "^2.4.5",
-    "happy-dom": "^14.3.9",
     "husky": "^9.0.11",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "nuxt-feedme": "^1.0.0",
     "prettier": "3.2.5",
