--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "prettier": "npx prettier . --write",
+    "prettier": "pnpm dlx prettier . --write",
     "prepare": "husky",
-    "vitest": "vitest run"
+    "vitest": "vitest run",
+    "preinstall": "pnpm dlx only-allow pnpm"
   },
   "lint-staged": {
-    "*": "npm run prettier"
+    "*": "pnpm prettier"
   },
   "dependencies": {
     "@nuxt/content": "^2.12.1",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@nuxt/test-utils": "^3.12.0",
     "@nuxtjs/sitemap": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.5",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
