--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prettier": "pnpm dlx prettier . --write",
     "prepare": "husky",
     "vitest": "vitest run",
-    "preinstall": "pnpm dlx only-allow pnpm"
+    "preinstall": "pnpm dlx only-allow pnpm",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "*": "pnpm prettier"
@@ -24,8 +26,16 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.2",
     "@nuxt/test-utils": "^3.12.0",
     "@nuxtjs/sitemap": "^5.1.2",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/test": "^8.0.8",
+    "@storybook/vue3": "^8.0.8",
+    "@storybook/vue3-vite": "^8.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.5",
     "husky": "^9.0.11",
@@ -33,8 +43,10 @@
     "lint-staged": "^15.2.2",
     "nuxt-feedme": "^1.0.0",
     "prettier": "3.2.5",
+    "storybook": "^8.0.8",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.2.8",
     "vitest": "^1.4.0"
   }
 }
