--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@nuxt/content": "^2.12.1",
     "@nuxt/fonts": "^0.6.0",
+    "@storybook/addon-a11y": "^8.0.8",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
