--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "vitest": "vitest run",
     "preinstall": "pnpm dlx only-allow pnpm",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint . --fix"
   },
   "lint-staged": {
     "*": "pnpm prettier"
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.2",
+    "@nuxt/eslint": "^0.3.8",
     "@nuxt/test-utils": "^3.12.0",
     "@nuxtjs/sitemap": "^5.1.2",
     "@storybook/addon-essentials": "^8.0.8",
@@ -39,6 +42,7 @@
     "@storybook/vue3-vite": "^8.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.5",
+    "eslint": "^9.1.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
