--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix"
+    "eslint:fix": "eslint . --fix",
+    "chromatic": "source .env && pnpm dlx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "lint-staged": {
     "*": "pnpm prettier"
@@ -42,6 +43,7 @@
     "@storybook/vue3-vite": "^8.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.5",
+    "chromatic": "^11.3.0",
     "eslint": "^9.1.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
@@ -53,5 +55,6 @@
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
     "vitest": "^1.5.0"
-  }
+  },
+  "version": ""
 }
