--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   run-vitest:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
