--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -13,6 +13,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+
+      - uses: pnpm/action-setup@v3
+        name: Install pnpm
+
       - run: pnpm install
       - run: pnpm vitest
       - name: clean up
