--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   run-vitest:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,6 +20,9 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
+        with:
+          version: 8
+          run_install: false
 
       - name: Install dependencies
         run: pnpm install
