--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "pnpm dlx prettier . --write",
     "prepare": "husky",
     "vitest": "vitest run",
+    "vitest:ui": "vitest --ui",
     "preinstall": "pnpm dlx only-allow pnpm",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -42,6 +43,7 @@
     "@storybook/vue3": "^8.0.8",
     "@storybook/vue3-vite": "^8.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/ui": "^1.6.0",
     "@vue/test-utils": "^2.4.5",
     "chromatic": "^11.3.0",
     "eslint": "^9.2.0",
