--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nuxt-feedme": "^1.0.0",
     "prettier": "3.3.0",
     "storybook": "^8.1.5",
+    "textlint": "^14.0.4",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.12",
