--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxt/fonts": "^0.7.0",
     "@storybook/addon-a11y": "^8.1.5",
     "nuxt": "^3.11.2",
+    "nuxt-og-image": "3.0.0-rc.53",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
