--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prettier": "3.3.0",
     "storybook": "^8.1.5",
     "textlint": "^14.0.4",
+    "textlint-rule-no-dropping-the-ra": "^3.0.0",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.12",
