--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/test-utils": "^3.13.1",
     "@nuxtjs/sitemap": "^5.2.0",
+    "@playwright/test": "^1.44.1",
     "@storybook/addon-essentials": "^8.1.10",
     "@storybook/addon-interactions": "^8.1.10",
     "@storybook/addon-links": "^8.1.10",
@@ -45,6 +46,7 @@
     "@storybook/test": "^8.1.10",
     "@storybook/vue3": "^8.1.10",
     "@storybook/vue3-vite": "^8.1.10",
+    "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/ui": "^1.6.0",
     "@vue/test-utils": "^2.4.6",
