--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "*.md": "pnpm textlint:fix"
   },
   "dependencies": {
+    "@axe-core/playwright": "^4.9.1",
     "@nuxt/content": "^2.12.1",
     "@nuxt/fonts": "^0.7.0",
     "@storybook/addon-a11y": "^8.1.10",
