--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lint-staged": "^15.2.7",
     "nuxt": "^3.12.2",
     "nuxt-feedme": "^1.0.0",
+    "nuxt-gtag": "^2.0.6",
     "prettier": "3.3.0",
     "storybook": "^8.1.10",
     "textlint": "^14.0.4",
