--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@axe-core/playwright": "^4.9.1",
     "@chromatic-com/storybook": "^1.5.0",
     "@nuxt/eslint": "^0.3.13",
+    "@nuxt/image": "^1.7.0",
     "@nuxt/test-utils": "^3.13.1",
     "@nuxtjs/sitemap": "^5.2.0",
     "@playwright/test": "^1.44.1",
