--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@nuxt/content": "^2.13.0",
     "@nuxt/fonts": "^0.7.0",
+    "@nuxtjs/robots": "^3.0.0",
     "nuxt-og-image": "3.0.0-rc.53",
     "vue": "^3.4.30",
     "vue-router": "^4.4.0"
