--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nuxt/content": "^2.13.1",
     "@nuxt/fonts": "^0.7.1",
     "@nuxtjs/robots": "^4.0.0",
+    "@vueuse/core": "^10.11.1",
+    "@vueuse/nuxt": "^10.11.1",
     "nuxt-og-image": "3.0.0-rc.53",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0"
