:sparkles: add remark-link-card & migrate pnpm to npm

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -20,14 +20,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-          run_install: false
-
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Deploy chromatic
         uses: chromaui/action@latest
@@ -40,4 +34,4 @@ jobs:
           rm -rf ./*
 
       - name: Clear cache of npm
-        run: pnpm store prune
+        run: npm cache clean --force
