--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,11 +14,11 @@ jobs:
         with:
           node-version: lts/*
       - name: Install dependencies
-        run: npm install -g pnpm && pnpm install
+        run: npm install
       - name: Install Playwright Browsers
-        run: pnpm exec playwright install --with-deps
+        run: npx exec playwright install --with-deps
       - name: Run Playwright tests
-        run: pnpm exec playwright test
+        run: npx exec playwright test
       - uses: actions/upload-artifact@v4
         if: always()
         with:
