--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "prettier": "pnpm dlx prettier . --write",
+    "prettier": "npx prettier . --write",
     "prepare": "husky",
     "vitest": "vitest run",
     "vitest:ui": "vitest --ui",
-    "preinstall": "pnpm dlx only-allow pnpm",
+    "preinstall": "npx only-allow npm",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "textlint": "textlint .",
     "textlint:fix": "textlint . --fix",
-    "chromatic": "source .env && pnpm dlx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
+    "chromatic": "source .env && npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "lint-staged": {
-    "*": "pnpm prettier",
-    "*.md": "pnpm textlint:fix"
+    "*": "npm run prettier",
+    "*.md": "npm run textlint:fix"
   },
   "dependencies": {
     "@nuxt/content": "^2.13.1",
@@ -32,6 +32,7 @@
     "@vueuse/core": "^10.11.1",
     "@vueuse/nuxt": "^10.11.1",
     "nuxt-og-image": "3.0.0-rc.53",
+    "remark-link-card": "^1.3.1",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0"
   },
