--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Install Playwright Browsers
-        run: npx exec playwright install --with-deps
+        run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx exec playwright test
       - uses: actions/upload-artifact@v4
