--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/ui": "^2.0.0",
     "@vue/test-utils": "^2.4.6",
+    "axe-html-reporter": "^2.2.10",
     "chromatic": "^11.7.0",
     "eslint": "^9.9.0",
     "husky": "^9.1.1",
