--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@storybook/vue3-vite": "^8.2.3",
     "@types/node": "^22.2.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitest/eslint-plugin": "^1.0.4",
     "@vitest/ui": "^2.0.0",
     "@vue/test-utils": "^2.4.6",
     "axe-html-reporter": "^2.2.10",
