--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "prettier": "npx prettier . --write",
     "prepare": "husky",
     "vitest": "vitest run",
     "vitest:ui": "vitest --ui",
@@ -22,7 +21,7 @@
     "chromatic": "source .env && npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "lint-staged": {
-    "*": "npm run prettier",
+    "*": "npm run eslint:fix",
     "*.md": "npm run textlint:fix"
   },
   "dependencies": {
@@ -67,7 +66,6 @@
     "nuxt": "^3.12.3",
     "nuxt-feedme": "^1.0.0",
     "nuxt-gtag": "^2.0.6",
-    "prettier": "3.3.0",
     "storybook": "^8.2.3",
     "textlint": "^14.2.0",
     "textlint-rule-no-dropping-the-ra": "^3.0.0",
