--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nuxt/eslint": "^0.7.0",
     "@nuxt/image": "^1.8.0",
     "@nuxt/test-utils": "^3.13.1",
+    "@nuxtjs/seo": "^2.0.2",
     "@nuxtjs/sitemap": "^6.1.0",
     "@nuxtjs/storybook": "^8.3.1",
     "@playwright/test": "^1.47.2",
