--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   "dependencies": {
     "@nuxt/content": "^2.13.1",
     "@nuxt/fonts": "^0.10.2",
-    "@nuxtjs/robots": "^4.1.0",
-    "@vueuse/core": "^11.2.0",
-    "@vueuse/nuxt": "^11.2.0",
-    "nuxt-og-image": "3.0.0-rc.53",
+    "@nuxtjs/robots": "^5.0.0",
+    "@vueuse/core": "^12.0.0",
+    "@vueuse/nuxt": "^12.0.0",
+    "nuxt-og-image": "4.0.0",
     "rehype-external-links": "^3.0.0",
     "remark-link-card": "^1.3.1",
     "vue": "^3.5.3",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.0",
