--- a/package.json
+++ b/package.json
@@ -72,7 +72,11 @@
     "nuxt-gtag": "^3.0.1",
     "storybook": "^8.4.2",
     "textlint": "^14.4.0",
+    "textlint-filter-rule-comments": "^1.2.2",
+    "textlint-rule-aws-service-name": "^1.12.0",
+    "textlint-rule-ja-unnatural-alphabet": "^2.0.1",
     "textlint-rule-no-dropping-the-ra": "^3.0.0",
+    "textlint-rule-no-hankaku-kana": "^2.0.1",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-components": "^0.28.0",
     "vite": "^6.0.2",
