--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nuxt/image": "^1.9.0",
     "@nuxt/test-utils": "^3.13.1",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/i18n": "^9.1.1",
     "@nuxtjs/seo": "^2.0.2",
     "@nuxtjs/sitemap": "^7.0.0",
     "@nuxtjs/storybook": "^8.3.1",
