--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "prepare": "husky",
-    "vitest": "vitest run",
+    "vitest": "vitest run --coverage",
     "vitest:ui": "vitest --ui",
     "preinstall": "npx only-allow npm",
     "storybook": "storybook dev -p 6006",
@@ -59,6 +59,7 @@
     "@storybook/vue3-vite": "^8.6.4",
     "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.0",
+    "@vitest/coverage-v8": "^3.0.5",
     "@vitest/eslint-plugin": "^1.1.4",
     "@vitest/ui": "^3.0.2",
     "@vue/test-utils": "^2.4.6",
