:gear: fix workflow of  vitest.yml (#147)

--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   run-vitest:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
