--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -11,6 +11,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+    env:
+      WORKING_DIRECTORY: app
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,3 +29,5 @@ jobs:
         run: npm run vitest
       - name: Show coverage report
         uses: davelosert/vitest-coverage-report-action@v2
+        with:
+          working-directory: ${{ env.WORKING_DIRECTORY }}
