:gear: add on method (#147)

--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - "**"
+  pull_request:
+    branches:
+      - "**"
+    types: [opened, reopened, synchronize, ready_for_review]
 
 jobs:
   run-vitest:
