--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nuxtjs/robots": "^5.0.0",
     "@vueuse/core": "^12.4.0",
     "@vueuse/nuxt": "^12.4.0",
+    "fuse.js": "^7.1.0",
     "nuxt-og-image": "^5.0.5",
     "rehype-external-links": "^3.0.0",
     "remark-link-card": "^1.3.1",
