--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm install
 
       - name: Run vitest
-        run: npm run vitest
+        run: npm run test:unit
       - name: Show coverage report
         uses: davelosert/vitest-coverage-report-action@v2
         with:
