--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "@nuxtjs/sitemap": "^7.4.3",
     "@nuxtjs/storybook": "^8.4.1",
     "@playwright/test": "^1.51.0",
-    "@storybook/addon-a11y": "^9.0.17",
-    "@storybook/addon-links": "^9.0.17",
-    "@storybook/vue3-vite": "^9.0.17",
+    "@storybook/addon-a11y": "9.0.5",
+    "@storybook/addon-links": "9.0.5",
+    "@storybook/vue3-vite": "9.0.5",
     "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.0",
     "@vitest/coverage-v8": "^3.0.5",
@@ -70,7 +70,7 @@
     "lint-staged": "^15.4.1",
     "nuxt": "^4.0.0",
     "nuxt-gtag": "^3.0.1",
-    "storybook": "^9.0.17",
+    "storybook": "9.0.5",
     "textlint": "^14.4.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-aws-service-name": "^1.13.0",
@@ -81,8 +81,8 @@
     "unplugin-vue-components": "^28.4.0",
     "vite": "^6.3.4",
     "vitest": "^3.0.5",
-    "eslint-plugin-storybook": "9.0.17",
-    "@storybook/addon-docs": "^9.0.17"
+    "eslint-plugin-storybook": "9.0.5",
+    "@storybook/addon-docs": "9.0.5"
   },
   "version": ""
 }
