--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxt/content": "^3.8.2",
     "@nuxt/fonts": "^0.12.1",
     "@nuxtjs/robots": "^5.5.6",
+    "@vercel/analytics": "^1.6.1",
     "@vueuse/core": "^14.0.0",
     "@vueuse/nuxt": "^14.0.0",
     "better-sqlite3": "^12.4.1",
